--- a/templates/doorlogs.html
+++ b/templates/doorlogs.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div>
-        <div class="tab-content" id="inventory-tabs"style="font-size: 1.3rem;">
-            <div class="tab-pane fade show active" id="inventory" role="tabpanel">
+        <div class="tab-content" id="doorlogs"style="font-size: 1.3rem;">
+            <div class="tab-pane fade show active" id="doorlogs" role="tabpanel">
                 <div class="inventory-header d-flex justify-content-between align-items-center mb-3">
                     <div class="search-bar mt-4">
                             <form method="GET" action="{{ url_for('doorlogs') }}" class="d-flex" onsubmit="searchDoorLogs(event)">
@@ -54,7 +54,8 @@
 
                 <div class="button-container" style="padding-right: 20px;">
                     <button class="btn btn-custom-blue" onclick="refresh()"><i class='bx bx-refresh'></i> Refresh</button>
-                    <button class="btn btn-primary"><i class='bx bx-download'></i> Extract CSV</button>
+                    <button class="btn btn-primary" onclick="extractCSV()"><i class='bx bx-download'></i> Extract</button>
+
                 </div>
                 
             </div>
