--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -52,7 +52,9 @@
 
                 <div class="button-container" style="padding-right: 20px;">
                     <button class="btn btn-custom-blue" onclick="refreshPage()"><i class='bx bx-refresh'></i> Refresh</button>
-                    <button class="btn btn-primary"><i class='bx bx-download'></i> Extract CSV</button>
+                    <button class="btn btn-primary" onclick="extractCSV()"><i class='bx bx-download'></i> Extract CSV</button>
+
+
                 </div>
             </div>
         </div>
